@page RN9 Release notes for SCIP 9

@section RN924 SCIP 9.2.4
*************************

Fixed bugs
----------

- fixed bugs with counting changes in presolving of nonlinear and setppc constraints which resulted in negative values

Build system
------------

### CMake

### Makefile

Miscellaneous
-------------

@section RN923 SCIP 9.2.3
*************************

Fixed bugs
----------

- avoid hashmap key error in removal of doubletons and singletons in dual presolve of setppc constraints by skipping tripleton locks
- when upgrading to xor constraint require parity variable to be enforced integral
- provide the depth of the applied effective root with SCIPtreeGetEffectiveRootDepth() to avert invalid globalization of constraint set changes
- disable objective limit during lexicographic dual minimization to preserve feasibility status
- declare infinite bound inference infeasible in SCIPinferVarLbCons() and SCIPinferVarUbCons() to maintain correct loose LP values
- fixed update of consssorted flags in a variable expressions data when adding an additional constraint using this variable
- corrected computation of number of variables affected by symmetry
- fixed computation of symmetry group size
- correct comparison conditions in checkRedundancySide() of cons_varbound.c to ensure pair redundancy
- also for the initial LP solve force acceptance of Farkas row in SCIPlpGetDualfarkas() if all other means for obtaining a reliable Farkas proof have failed
- avoid overwriting the cutoff flag in tightenCoefs(), preprocessConstraintPairs(), and applyFixings() of cons_varbound.c to reject infeasible solutions
- fix memory leak in CppAD interface w.r.t. user expressions
- adjust bound before checking feasibility in SCIPvarAddVlb() and SCIPvarAddVub() to detect integrality cutoff
- choose incumbent solution as reference in varFixingsRins() and varFixingsDins() of ALNS heuristic to ensure integrality